Fixed quirk with text truncation on tabs

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -108,5 +108,6 @@ small {
 }
 
 .trim-text {
+    display: block;
     @include trim-text;
 }
